--- a/style.css
+++ b/style.css
@@ -35,17 +35,18 @@ body {
 .add__field {
   display: flex;
 }
-ul {
+.main__section {
   margin:0;
   padding: 0px;
-}
-li, h3 {
   list-style:none;
 }
-input,button{
+/* li, h3 {
+  list-style:none;
+} */
+.input,.main__btn{
   outline:none;
 }
-button {
+.main__btn {
   background: none;
   border: 0px;
   color: #888;
@@ -54,12 +55,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.main__btn:hover {
   color: #3a3A3a;
 }
 /* Heading */
-h3,
-label[for="add-task"] {
+.section-title{
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -68,7 +68,7 @@ label[for="add-task"] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type="text"] {
+.input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -80,21 +80,21 @@ input[type="text"] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type="text"]:focus {
+.input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for="add-task"] {
+.add__title {
   display: block;
   margin: 0 0 20px;
 }
-input#add-task {
+.add__input {
   width: 318px;
 }
 
 /* Task list */
-li {
+.task {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -103,47 +103,47 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+/* li > * {
   vertical-align: middle;
-}
+} */
 
-li > input[type="checkbox"] {
+.main__checkbox {
   margin: 0 10px;
 }
-li > label {
+.task__name{
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li >    input[type="text"] {
+.task__input {
   width: 226px
 }
-button.task__delete-btn img {
+.delete-icon {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.task__delete-btn img:hover {
+.delete-icon:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed label {
+.completed__task-name {
   text-decoration: line-through
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.task__input {
   display:none
 }
 
-ul li.task_edit input[type=text] {
+.task_edit .task__input {
   display:inline-block;
   width:224px
-}
+} 
 
-ul li.task_edit label {
+.task_edit .task__name {
   display:none;
-}
+} 
