refactor(basic-3.7): add a semicolon after each property

--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ body {
 
 /* Completed */
 .completed__task-name {
-  text-decoration: line-through
+  text-decoration: line-through;
   color: #888;
 }
 
