--- a/style.css
+++ b/style.css
@@ -1,53 +1,20 @@
 /* Basic Style */
 body {
   background-color: #f8f8f8;
-  color: #333;
-  font-family: Lato, sans-serif;
-}
-.header {
-  width: 500px;
-  margin: 0 auto;
-  display: block;
-  text-align: right;
-}
-.header img {
-  width: 100%;
-}
-.header .header__link {
-  font-family: fantasy, cursive;
 }
 
-@media (max-width: 768px) {
-  .header {
-    text-align: center;
-  }
-}
 .main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
+  color: #333;
+  font-family: Lato, sans-serif;
 }
-.task__name,
-.input {
-  width: 56%;
-  display: inline-block;
-  flex-grow: 1;
+
+.main__checkbox {
+  margin: 0 10px;
 }
-.add__field {
-  display: flex;
-}
-.section__list {
-  margin: 0;
-  padding: 0px;
-  list-style: none;
-}
-/* li, h3 {
-  list-style: none;
-} */
-.input,
-.main__btn {
-  outline: none;
-}
+
 .main__btn {
   background: none;
   border: 0px;
@@ -57,20 +24,8 @@ body {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-.main__btn:hover {
-  color: #3a3a3a;
-}
-/* Heading */
-.section-title {
-  color: #333;
-  font-weight: 700;
-  font-size: 15px;
-  border-bottom: 2px solid #333;
-  padding: 30px 0 10px;
-  margin: 0;
-  text-transform: uppercase;
-}
-.input {
+
+.main__input {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,17 +37,66 @@ body {
   font-family: Lato, sans-serif;
   color: #888;
 }
-.input:focus {
+
+.main__input:focus {
   color: #333;
 }
 
-/* New Task */
-.add__title {
+.main__input,
+.main__btn {
+  outline: none;
+}
+
+.main__btn:hover {
+  color: #3a3a3a;
+}
+
+.task__name,
+.main__input {
+  width: 56%;
+  display: inline-block;
+  flex-grow: 1;
+}
+
+/* Header  */
+.header {
+  width: 500px;
+  margin: 0 auto;
   display: block;
-  margin: 0 0 20px;
+  text-align: right;
+}
+
+.header__image {
+  width: 100%;
+}
+
+.header__link {
+  font-family: fantasy, cursive;
+}
+
+/* New Task */
+.add__field {
+  display: flex;
+  padding-top: 20px;
 }
 .add__input {
   width: 318px;
+}
+
+/* Section */
+.section-title {
+  color: #333;
+  font-weight: 700;
+  font-size: 15px;
+  border-bottom: 2px solid #333;
+  padding: 30px 0 10px;
+  margin: 0;
+  text-transform: uppercase;
+}
+.section-list {
+  margin: 0;
+  padding: 0px;
+  list-style: none;
 }
 
 /* Task list */
@@ -105,13 +109,7 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-/* li > * {
-  vertical-align: middle;
-} */
 
-.main__checkbox {
-  margin: 0 10px;
-}
 .task__name {
   padding-left: 10px;
   box-sizing: border-box;
@@ -120,16 +118,9 @@ body {
   margin: 0;
   font-weight: 400;
 }
+
 .task__input {
   width: 226px;
-}
-.delete-icon {
-  height: 2em;
-  transform: rotateZ(45deg);
-  transition: transform 200ms ease-in;
-}
-.delete-icon:hover {
-  transform: rotateZ(0);
 }
 
 /* Completed */
@@ -150,4 +141,21 @@ body {
 
 .task_edit .task__name {
   display: none;
+}
+
+/* Delete button  */
+.delete-icon {
+  height: 2em;
+  transform: rotateZ(45deg);
+  transition: transform 200ms ease-in;
+}
+.delete-icon:hover {
+  transform: rotateZ(0);
+}
+
+/* Media queries */
+@media (max-width: 768px) {
+  .header {
+    text-align: center;
+  }
 }
